lab6SOC/lab6SOC.sdk/.metadata/.plugins/org.eclipse.cdt.ui/lab8.build.log
10:56:18 **** Auto Build of configuration Debug for project lab8 ****
make all 
'Building file: ../src/interrupt_counter_tut_2B.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/interrupt_counter_tut_2B.o" -I../../lab8_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/interrupt_counter_tut_2B.d" -MT"src/interrupt_counter_tut_2B.d" -o "src/interrupt_counter_tut_2B.o" "../src/interrupt_counter_tut_2B.c"
../src/interrupt_counter_tut_2B.c: In function 'main':
../src/interrupt_counter_tut_2B.c:29:25: error: 'XPAR_AXI_GPIO_1_DEVICE_ID' undeclared (first use in this function)
 #define LEDS_DEVICE_ID  XPAR_AXI_GPIO_1_DEVICE_ID
                         ^
../src/interrupt_counter_tut_2B.c:83:39: note: in expansion of macro 'LEDS_DEVICE_ID'
   status = XGpio_Initialize(&LEDInst, LEDS_DEVICE_ID);
                                       ^
../src/interrupt_counter_tut_2B.c:29:25: note: each undeclared identifier is reported only once for each function it appears in
 #define LEDS_DEVICE_ID  XPAR_AXI_GPIO_1_DEVICE_ID
                         ^
../src/interrupt_counter_tut_2B.c:83:39: note: in expansion of macro 'LEDS_DEVICE_ID'
   status = XGpio_Initialize(&LEDInst, LEDS_DEVICE_ID);
                                       ^
../src/interrupt_counter_tut_2B.c:28:25: error: 'XPAR_AXI_GPIO_0_DEVICE_ID' undeclared (first use in this function)
 #define BTNS_DEVICE_ID  XPAR_AXI_GPIO_0_DEVICE_ID
                         ^
../src/interrupt_counter_tut_2B.c:86:39: note: in expansion of macro 'BTNS_DEVICE_ID'
   status = XGpio_Initialize(&BTNInst, BTNS_DEVICE_ID);
                                       ^
../src/interrupt_counter_tut_2B.c: In function 'IntcInitFunction':
../src/interrupt_counter_tut_2B.c:30:32: error: 'XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR' undeclared (first use in this function)
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                ^
../src/interrupt_counter_tut_2B.c:141:13: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
             INTC_GPIO_INTERRUPT_ID,
             ^
make: *** [src/interrupt_counter_tut_2B.o] ´íÎó 1

10:56:22 Build Finished (took 3s.987ms)

